--- a/charts/spark-operator-chart/templates/hpa.yaml
+++ b/charts/spark-operator-chart/templates/hpa.yaml
@@ -6,6 +6,7 @@ metadata:
   labels:
     {{- include "spark-operator.labels" . | nindent 4 }}
 spec:
+  serviceAccountName: {{ include "spark-operator.serviceAccountName" . }}
   scaleTargetRef:
     apiVersion: apps/v1
     kind: Deployment
